--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hamster_wheel"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["OsamaElHariri <yamsandbread@gmail.com>"]
 edition = "2018"
 description = "Looping code generator that allows for generating code over a collection"
@@ -11,4 +11,4 @@ logos = "0.10.0-rc2"
 reqwest = "0.9.19"
 csv = "1.0.0-beta.5"
 walkdir = "2.2.9"
-
+clap = "2.33.0"
